--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -1,7 +1,7 @@
 {% block content %}
-    <form action="/login/" method="post" novalidate>
-        <label for="username"></label><input type="text" id="username">
-        <label for="password"></label><input type="password" id="password">
-        <input type="submit" value="저장하기">
+    <form action="/login/" method="post">
+        <input type="text" name="username"/>
+        <input type="password" name="password"/>
+        <input type="submit" value="저장하기"/>
     </form>
 {%  endblock %}
