--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -1,7 +1,14 @@
+{% load socialaccount %}
+
 {% block content %}
-    <form action="/login/" method="post">
-        <input type="text" name="username"/>
+    <form action="/users/login/" method="post">
+        <input type="email" name="email"/>
+        </br>
         <input type="password" name="password"/>
         <input type="submit" value="저장하기"/>
     </form>
+    <a href="{% provider_login_url 'kakao' method='oauth2' %}">
+        카카오톡 회원가입
+    </a>
+    <a href=" {% provider_login_url 'naver' %}">네이버 로그인</a>
 {%  endblock %}
